@@ -140,6 +140,7 @@ namespace evf
     xdata::UnsignedInteger32         timeoutOnStop_; // in seconds
     xdata::Boolean                   hasShMem_;
     xdata::Boolean                   hasPrescaleService_;
+    xdata::Boolean                   isRunNumberSetter_;
     bool                             outprev_;
     
     // dqm monitor thread configuration
